[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "MCP server that persists Claude Code memory to a git-tracked file"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "claude", "memory", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/santicalderon/claude-memory-mcp"
Repository = "https://github.com/santicalderon/claude-memory-mcp"

[project.scripts]
claude-memory-mcp = "claude_memory_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory_mcp"]
